--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,11 @@
+#searchbar {
+  width: 100%;
+  text-align: center;
+}
 
+#grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, 200px);
+}
 
 /*# sourceMappingURL=styles.css.map */
