--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,7 @@
 }
 
 #txtBox {
-  width: 50%;
+  width: 40%;
   min-width: 300px;
   height: 35px;
 }
@@ -15,6 +15,10 @@
   grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
   gap: 20px;
   max-width: 90%;
+  margin: auto;
+}
+
+.card {
   margin: auto;
 }
 
