--- a/scss/_grid.scss
+++ b/scss/_grid.scss
@@ -5,7 +5,7 @@
 }
 
 #txtBox {
-    width: 50%;
+    width: 40%;
     min-width: 300px;
     height: 35px;
 }
@@ -15,5 +15,9 @@
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     gap: 20px;
     max-width: 90%;
+    margin: auto;
+}
+
+.card {
     margin: auto;
 }
