--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,1 +1,1 @@
-@import '_variables.scss', '_mixins.scss', '_layout.scss';
+@import '_variables.scss', '_mixins.scss', '_baguettebox.scss', '_layout.scss';
