--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -1,7 +1,24 @@
+body {
+    margin: 0;
+}
+
+#logo svg {
+    width: 45px;
+    height: 45px;
+}
+
+#logoRect {
+    fill-opacity: 0.4;
+}
+
+#roundCornerRect {
+    fill-opacity: 0;
+}
+
 #searchbar {
     width: 100%;
     text-align: center;
-    margin: 2rem 0;
+    margin: 0 0 2rem;
 }
 
 #search {
